5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4422/executions/1593_1806.log
== TEST (2019-04-07 13:46:51) 
-- CODE:
from math import *
npessoas = int(input("Numero de alunos: "))
probab = 1 - (fatorial(365)/ fatorial(365 - npessoas)) * (1 / 365 ** npessoas)
print(float(probab))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    probab = 1 - (fatorial(365)/ fatorial(365 - npessoas)) * (1 / 365 ** npessoas)
NameError: name 'fatorial' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 13:47:12) 
-- CODE:
from math import *
npessoas = int(input("Numero de alunos: "))
probab = 1 - (factorial(365)/ factorial(365 - npessoas)) * (1 / 365 ** npessoas)
print(float(probab))
-- OUTPUT:
0.1670247888380645
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 13:47:24) 
-- CODE:
from math import *
npessoas = int(input("Numero de alunos: "))
probab = 1 - (factorial(365)/ factorial(365 - npessoas)) * (1 / 365 ** npessoas)
print(float(probab))
-- EXECUTION TIME:
0.138668
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
0.1670247888380645
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
0.5383442579145288
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
0.9999995783990275
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 13:47:56) 
-- CODE:
from math import *
npessoas = int(input("Numero de alunos: "))
probab = 1 - (factorial(365)/ factorial(365 - npessoas)) * (1 / 365 ** npessoas)
print(round(probab, 2)
-- ERROR:
File "XXXX", line 5
    
                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 13:48:02) 
-- CODE:
from math import *
npessoas = int(input("Numero de alunos: "))
probab = 1 - (factorial(365)/ factorial(365 - npessoas)) * (1 / 365 ** npessoas)
print(round(probab, 2))
-- OUTPUT:
0.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 13:48:31) 
-- CODE:
from math import *
npessoas = int(input("Numero de alunos: "))
probab = (1 - (factorial(365)/ factorial(365 - npessoas)) * (1 / 365 ** npessoas)) * 100
print(round(probab, 2))
-- OUTPUT:
16.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 13:48:35) 
-- CODE:
from math import *
npessoas = int(input("Numero de alunos: "))
probab = (1 - (factorial(365)/ factorial(365 - npessoas)) * (1 / 365 ** npessoas)) * 100
print(round(probab, 2))
-- EXECUTION TIME:
0.190865
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
16.7
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
53.83
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
